Fix signup page overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@
   }
 }
 
-body {
+body:not(:has(app-auth)) {
   overflow: hidden;
 }
 
